objects/Visit__c.object
<CustomObject>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hospital__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hospital</label>
        <referenceTo>Hospital__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <label>Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <label>Visit</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Visit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Visit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>